--- a/index.html
+++ b/index.html
@@ -9,8 +9,10 @@
 </head>
 
 <body>
-  <div id="board">
+  <div id="board-border">
+    <div id="board">
 
+    </div>
   </div>
 </body>
 <script src="./js/main.js"></script>
